wiki/content/specifications/vec/V120/classes/windingtype.md
---
title: WindingType
toc: false
type: specs
date: "2019-05-05T00:00:00+01:00"
draft: false
menu_name: vec120

# Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
weight: 
---
<html>   <head>     </head>   <body>     <p> &#160;Defines the type of taping.       </p>  </body> </html>
## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | instancing_non_electrical_parts |
| **Applied Stereotype**  | [OpenEnumeration]({{< relref "openenumeration.md" >}})<br/>  |

## Enumeration Literals
| Name          | **Description** |
|---------------|-----------------|
| OnSpace | <html>   <head>     </head>   <body>     <p> <i>OnSpace</i> describes a taping with gaps between the rounds (German: Luecke)      </p>  </body> </html> |
| Spare | <html>   <head>     </head>   <body>     <p> <i>Spare</i> describes a taping with larger gaps between the rounds (German: Spar)      </p>  </body> </html> |
| Overlap | <html>   <head>     </head>   <body>     <p> <i>Overlap</i> describes a taping where each round overlaps the preceeding round.      </p>  </body> </html> |
| DoubleOverlap | <html>   <head>     </head>   <body>     <p> <i>DoubleOverlap</i> describes a taping where each round overlaps the preceeding round and the taping is done twice (forward and backwards).      </p>  </body> </html> |
| Spiral | <html>   <head>     </head>   <body>     <p> <i>Spiral</i> defines a taping with the least overlapping (German: Spiral).       </p>  </body> </html> |
| Longitudinal | <html>   <head>     </head>   <body>     <p> <i>Longitudinal </i>defines a taping with where the tape is folded around a segment.      </p>  </body> </html> |
